# taiyaki

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  release.yml
crates/taiyaki-cli/: Cargo.toml
crates/taiyaki-cli/src/: aot_compile.rs  async_builtins.rs  build.rs  check.rs  child_process.rs  compile.rs  dns.rs  fmt.rs  fs_watch.rs  lint.rs  main.rs  net.rs  package_manager.rs  repl.rs  server.rs  test_runner.rs  tls.rs  util.rs  watch.rs
crates/taiyaki-cli/tests/: cli_test.rs  phase10_test.rs  phase12_test.rs  phase13_test.rs  phase14_test.rs  phase15_test.rs  phase16_test.rs  phase17_test.rs  phase9_test.rs
crates/taiyaki-core/: Cargo.toml  build.rs  cbindgen.toml
crates/taiyaki-core/include/: taiyaki.h
crates/taiyaki-core/src/: ffi.rs  lib.rs  permissions.rs  transpiler.rs
crates/taiyaki-core/src/engine/: async_jsc_backend.rs  async_quickjs_backend.rs  convert.rs  jsc_backend.rs  jsc_sys.rs  mod.rs  module_store.rs  quickjs_backend.rs
crates/taiyaki-core/tests/: integration_test.rs
crates/taiyaki-node-polyfill/: Cargo.toml
crates/taiyaki-node-polyfill/src/: lib.rs
crates/taiyaki-node-polyfill/src/js/: assert.js  buffer.js  buffer_global.js  child_process.js  crypto.js  crypto_global.js  dns.js  events.js  fs.js  http.js  net.js  os.js  path.js  readline.js  require.js  sqlite.js  stream.js  tls.js  url.js  util.js  vm.js  worker_threads.js  zlib.js
crates/taiyaki-node-polyfill/src/modules/: buffer.rs  child_process.rs  events.rs  fs.rs  mod.rs  os.rs  path.rs  require.rs  url.rs  util.rs  zlib.rs
crates/taiyaki-node-polyfill/src/modules/crypto/: aes.rs  derive.rs  digest.rs  ec.rs  hmac_ops.rs  import_export.rs  keygen.rs  mod.rs  rsa_ops.rs  util.rs  wrap.rs
crates/taiyaki-python/: Cargo.toml  pyproject-jsc.toml  pyproject.toml
crates/taiyaki-python/src/: deps.rs  lib.rs
crates/taiyaki-runtime/: Cargo.toml
crates/taiyaki-runtime/include/: taiyaki_runtime.h
crates/taiyaki-runtime/src/: async_fs.rs  builtins.rs  child_process.rs  ffi.rs  http_node.rs  lib.rs  readline.rs  sqlite.rs  util.rs  worker_threads.rs
examples/: async_fetch.js  async_timeout.js  hello.js  hello.ts  module.js  node_buffer.js  node_events.js  node_path.js  node_require.js
examples/c/: hello.c
examples/hono-test/: app.js  app.mjs  bundle.js  bundle_iife.js  package.json  server.js  server_esm.js  simple_server.js  test1.js  test10.js  test11.js  test12.js  test13.js  test2.js  test3.js  test4.js  test5.js  test6.js  test7.js  test8.js  test9.js  test_bare.js  test_esm.js  test_hono_esm.js
examples/python/: hello.py  hello_async.py
include/: taiyaki.h
