[package]
name = "taiyaki-core"
version = "0.1.4"
edition = "2024"
description = "Embeddable JS/TS runtime core — QuickJS and JSC backends"
license = "MIT"
repository = "https://github.com/i2y/taiyaki"
authors = ["Yasushi Itoh"]
keywords = ["javascript", "typescript", "runtime", "quickjs", "embedding"]
categories = ["wasm", "compilers"]
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["quickjs"]
quickjs = ["dep:rquickjs"]
jsc = ["dep:tokio"]
futures = ["quickjs", "rquickjs/futures"]

[dependencies]
rquickjs = { version = "0.11", features = ["bindgen", "loader"], optional = true }
tokio = { version = "1", features = ["rt", "sync"], optional = true }
swc_ts_fast_strip = "48"
swc_common = "21"
swc_ecma_parser = "38"
swc_ecma_codegen = "26"
swc_ecma_ast = "23"
swc_ecma_visit = "23"
swc_ecma_transforms_base = "41"
swc_ecma_transforms_typescript = "45"
swc_ecma_transforms_react = "45"
swc_ecma_transforms_module = "45"
serde_json = "1"

[build-dependencies]
cbindgen = "0.29"
pkg-config = "0.3"
