[package]
name = "taiyaki-node-polyfill"
version = "0.2.0"
edition = "2024"
description = "Node.js compatibility polyfills for taiyaki runtime"
license = "MIT"
repository = "https://github.com/i2y/taiyaki"
authors = ["Yasushi Itoh"]
keywords = ["javascript", "nodejs", "polyfill", "runtime"]
categories = ["wasm"]
readme = "../../README.md"

[features]
default = ["quickjs"]
quickjs = ["taiyaki-core/quickjs"]
jsc = ["taiyaki-core/jsc"]
futures = ["quickjs", "taiyaki-core/futures"]

[dependencies]
taiyaki-core = { version = "0.2.0", path = "../taiyaki-core", default-features = false }
base64 = "0.22"
serde_json = "1"
getrandom = "0.2"
libc = "0.2"

# Crypto - digests
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
md-5 = "0.10"
digest = "0.10"

# Crypto - MAC
hmac = "0.12"

# Crypto - symmetric ciphers
aes = "0.8"
aes-gcm = "0.10"
ctr = "0.9"
cbc = { version = "0.1", features = ["alloc"] }
aes-kw = "0.2"

# Crypto - RSA
rsa = "0.9"

# Crypto - elliptic curves
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
p384 = { version = "0.13", features = ["ecdsa", "ecdh"] }
ecdsa = { version = "0.16", features = ["signing", "verifying", "der"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }

# Crypto - key derivation
hkdf = "0.12"
pbkdf2 = "0.12"
scrypt = "0.11"

# Crypto - key formats
pkcs8 = { version = "0.10", features = ["alloc"] }
spki = { version = "0.7", features = ["alloc"] }
sec1 = { version = "0.7", features = ["alloc"] }

# Crypto - random (RSA keygen)
rand = "0.8"

# Compression
flate2 = "1.0"
brotli = "7"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
