[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "taiyaki"
version = "0.1.2"
description = "Python bindings for taiyaki JS/TS runtime"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Yasushi Itoh" }]
keywords = ["javascript", "typescript", "runtime", "quickjs"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
Repository = "https://github.com/i2y/taiyaki"

[tool.maturin]
features = ["pyo3/extension-module"]
