[package]
name = "taiyaki-runtime"
version = "0.1.4"
edition = "2024"
description = "Full JS/TS runtime with HTTP server, Web APIs, and Node.js polyfills — C ABI for AOT"
license = "MIT"
repository = "https://github.com/i2y/taiyaki"
authors = ["Yasushi Itoh"]

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = ["quickjs"]
quickjs = ["taiyaki-core/futures", "taiyaki-node-polyfill/futures"]
jsc = ["taiyaki-core/jsc", "taiyaki-node-polyfill/jsc"]
sqlite = ["dep:rusqlite"]

[dependencies]
taiyaki-core = { version = "0.1.4", path = "../taiyaki-core", default-features = false }
taiyaki-node-polyfill = { version = "0.1.4", path = "../taiyaki-node-polyfill", default-features = false }
tokio = { version = "1", features = ["rt", "time", "macros", "net", "sync", "io-std", "process", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"
base64 = "0.22"
libc = "0.2"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-tungstenite = "0.26"
tungstenite = "0.26"
sha1 = "0.10"
futures-util = "0.3"
url = "2"
notify = "7"
notify-debouncer-mini = "0.5"
tokio-rustls = "0.26"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
rustls-pemfile = "2"
webpki-roots = "1"
rustls-pki-types = "1"
